--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,20 @@ version = "0.1.0"
 description = "Proyecto Python"
 readme = "README.md"
 requires-python = ">=3.8"
-authors = [
-    {name = "Tu Nombre", email = "tu@email.com"}
+authors = [{ name = "Mainics" }]
+dependencies = [
+    "pandas>=2.2.0",
+    "numpy>=1.26.0",
+    "openpyxl>=3.1.2",
+    "xlsxwriter>=3.2.0",
+    "pyxlsb>=1.0.10",
+    "xlrd>=2.0.1",
+    "xlwt>=1.3.0",
+    "python-calamine>=0.2.0",
+    "python-dotenv>=1.0.0",
+    "python-dateutil>=2.8.2",
+    "validators>=0.22.0",
+    "colorlog>=6.8.0",
 ]
 
 [tool.black]
@@ -62,8 +74,8 @@ ignore_missing_imports = true
 [tool.pylint.messages_control]
 max-line-length = 88
 disable = [
-    "C0111",  # missing-docstring
-    "C0103",  # invalid-name
+    "C0111", # missing-docstring
+    "C0103", # invalid-name
 ]
 
 [tool.coverage.run]
