Update logging configuration in .env.example and config.py

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,48 @@
 # Variables de entorno del proyecto
 # Copia este archivo a .env y configura tus valores
 
-# Configuración general
-DEBUG=True
+# ============================================================================
+# Configuración General
+# ============================================================================
+DEBUG=False
 LOG_LEVEL=INFO
 
-# Base de datos (ejemplo)
-# DATABASE_URL=postgresql://user:password@localhost:5432/dbname
+# ============================================================================
+# Configuración de Logging por Categoría
+# ============================================================================
+# Controla los niveles de logging sin modificar código
+# Valores posibles: DEBUG, INFO, WARNING, ERROR, CRITICAL
 
-# API Keys (ejemplo)
-# API_KEY=your_api_key_here
-# SECRET_KEY=your_secret_key_here
+# Nivel 1 - Scripts CLI (process_excel_directory.py, consolidate_excel.py, etc.)
+# Interacción directa con el usuario, muestra progreso en consola
+LOG_LEVEL_CLI=INFO
 
-# Rutas
-# DATA_PATH=./data
-# LOGS_PATH=./logs
+# Nivel 2 - Coordinadores (consolidator, batch, extractor, etc.)
+# Orquestan operaciones, muestran progreso visible
+LOG_LEVEL_COORDINATORS=INFO
+
+# Nivel 3 - Procesadores (detector, handler, quick, etc.)
+# Trabajo interno, solo registran en archivo (sin consola)
+LOG_LEVEL_PROCESSORS=INFO
+
+# Nivel 4 - Utilidades (utils.py)
+# Helpers de bajo nivel, solo reportan advertencias y errores
+LOG_LEVEL_UTILS=WARNING
+
+# ============================================================================
+# Ajustes para Desarrollo/Debugging
+# ============================================================================
+# Para debugging intensivo, cambia temporalmente a DEBUG:
+# LOG_LEVEL_CLI=DEBUG
+# LOG_LEVEL_COORDINATORS=DEBUG
+# LOG_LEVEL_PROCESSORS=DEBUG
+# LOG_LEVEL_UTILS=DEBUG
+
+# ============================================================================
+# Ajustes para Producción (Mínimo ruido)
+# ============================================================================
+# Para producción con mínimo logging:
+# LOG_LEVEL_CLI=WARNING
+# LOG_LEVEL_COORDINATORS=WARNING
+# LOG_LEVEL_PROCESSORS=WARNING
+# LOG_LEVEL_UTILS=ERROR
